--- a/kawn_subscriptions_manager/templates/clients/list_outlet.html
+++ b/kawn_subscriptions_manager/templates/clients/list_outlet.html
@@ -72,13 +72,13 @@
             <tbody>
               {% for data in object_list %}
               <tr>
-                <td class="px-4">
+                <td data-sort="{{ data.name }}" class="px-4">
                   <p class="text-xs font-weight-bold mb-0 text-start">{{ data.name }}</p>
                 </td>
-                <td>
+                <td data-sort="{{ data.phone }}">
                   <p class="text-xs font-weight-bold mb-0 text-end">{{ data.phone }}</p>
                 </td>
-                <td class="px-4">
+                <td data-sort="{{ data.address }}" class="px-4">
                   <p class="text-xs font-weight-bold mb-0 text-start">{{ data.address }}</p>
                 </td>
                 <td class="px-4">
