--- a/kawn_subscriptions_manager/templates/clients/sales/list_outlet.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_outlet.html
@@ -77,7 +77,7 @@
             <tbody>
               {% for data in object_list %}
               <tr>
-                <td class="px-4">
+                <td data-sort="{{ data.name }}" class="px-4">
                   <p class="text-xs font-weight-bold mb-0 text-start">{{ data.name }}</p>
                 </td>
                 <td class="px-4">
@@ -86,7 +86,7 @@
                 <td>
                   <p class="text-xs font-weight-bold mb-0 text-end">{{ data.phone }}</p>
                 </td>
-                <td class="px-4">
+                <td data-sort="{{ data.address }}" class="px-4">
                   <p class="text-xs font-weight-bold mb-0 text-start">{{ data.address }}</p>
                 </td>
                 <td class="px-4">
