--- a/kawn_subscriptions_manager/templates/subscriptions/list_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/list_subscription.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% load bootstrap_pagination %}
 {% load humanize %}
-{% load django_tables2 %}
 {% load crispy_forms_tags %}
 
 {% block menu-title %}List User Subscriptions{% endblock %}
@@ -34,98 +32,106 @@
           <div class="align-middle">
             <h5 class="font-weight-bolder">Susbcriptions</h5>
           </div>
+
           <div class="col-lg-12 mb-4 mt-2">
-            <form method="get">
-              <div class="row">
-                <div class="col-md-2">
-                  {{ subscription_filter.form.subscriptionplan|as_crispy_field }}
-                </div>
-                <div class="col-md-2">
-                  {{ subscription_filter.form.expires|as_crispy_field }}
-                </div>
-                <div class="col-md-2">
-                  {{ subscription_filter.form.active|as_crispy_field }}
-                </div>
-                <div class="col-md-4 mt-4">
-                  <button class="btn bg-gradient-info mt-2 mb-0" type="submit">Filter</button>
-                  <button class="btn bg-gradient-info mt-2 mb-0">
-                    <a href="{% url 'subscriptions:list_subscription' %}" class="text-white">
-                      Clear Filter
-                    </a>
-                  </button>
+            <button type="button" class="btn bg-gradient-dark align-middle col-md-2" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              Advanced Search
+            </button>
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Advanced Search</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="col-lg-12">
+                      <form method="get">
+                        <div class="row">
+                          <div>
+                            {{ subscription_filter.form.subscriptionplan|as_crispy_field }}
+                          </div>
+                          <div>
+                            {{ subscription_filter.form.expires|as_crispy_field }}
+                          </div>
+                          <div>
+                            {{ subscription_filter.form.active|as_crispy_field }}
+                          </div>
+                          <div class="modal-footer">
+                            <button class="btn bg-secondary">
+                              <a href="{% url 'subscriptions:list_subscription' %}" class="text-white">
+                                Clear Filter
+                              </a>
+                            </button>
+                            <button class="btn bg-gradient-info" type="submit">Filter</button>
+                          </div>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
                 </div>
               </div>
-            </form>
+            </div>
           </div>
         </div>
       </div>
-      <div class="card-body px-0 pt-0 pb-2">
-        <div class="table-responsive p-0">
-          <table class="table sortable align-items-center mb-0">
-            <thead>
-              <tr>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder">Outlet Name</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder">Subscription Plan</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Billing Date</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Expired Date</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder">Status</th>
-                <th class="text-center text-uppercase text-xs text-dark font-weight-bolder">Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              {% for data in object_list %}
-              <tr>
-                <td data-sort="{{ data.outlet.name }}" class="px-4">
-                  <p class="text-xs font-weight-bold mb-0">{{ data.outlet.name }}</p>
-                </td>
-                <td data-sort="{{ data.subscriptionplan.name }}" class="px-4">
-                  <p class="text-xs font-weight-bold mb-0">{{ data.subscriptionplan.name }}</p>
-                </td>
-                <td data-sort="{{ data.billing_date | date:'Ymd' }}" class="align-middle text-sm px-4">
-                  <p class="text-xs font-weight-bold mb-0 text-end">{{ data.billing_date|date:'D, d M Y' }}</p>
-                </td>
-                <td data-sort="{{ data.expires | date:'Ymd' }}" class="align-middle text-sm px-4">
-                  <p class="text-xs font-weight-bold mb-0 text-end">{{ data.expires|date:'D, d M Y' }}</p>
-                </td>
-                <td class="px-4">
-                  {% if data.active == True %}
-                  <p class="text-xs font-weight-bold mb-0 text-start">Active</p>
-                  {% else %}
-                  <p class="text-xs font-weight-bold mb-0 text-start">Not Active</p>
-                  {% endif%}
-                </td>
-                <td class="align-middle text-center text-sm">
-                  {% if data.active == True %}
-                  <a href="{% url 'subscriptions:deactivate_subscription' data.id %}"
-                    class="btn btn-sm bg-danger text-white text-xs">Deactivate</a>
-                  {% else %}
-                  <a href="{% url 'subscriptions:activate_subscription' data.id %}" class="btn btn-sm bg-info text-white text-xs">Activate</a>
-                  {% endif %}
-                </td>
-              </tr>
-              {% empty %}
-              <tr class="text-center">
-                <td colspan="8" class="align-middle text-center text-sm">
-                  <p class="text-xs font-weight-bold mb-0">No Item in List</p>
-                </td>
-              </tr>
-              {% endfor %}
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <div class="card-footer">
-        <div class="row">
-          <hr>
-          <div class="col-md-6">
-            <span>{% bootstrap_paginate page_obj show_first_last="true" centered="true" range=1 %}</span>
+      <section class="section">
+        <div class="card">
+          <div class="card-body">
+            <table class="table" id="table1">
+              <thead>
+                <tr>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder">Outlet Name</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder">Subscription Plan</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Billing Date</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Expired Date</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder">Status</th>
+                  <th class="text-center text-uppercase text-xs text-dark font-weight-bolder">Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for data in object_list %}
+                <tr>
+                  <td class="align-middle text-sm px-4">
+                    <p class="text-xs font-weight-bold mb-0">{{ data.outlet.name }}</p>
+                  </td>
+                  <td class="align-middle text-sm px-4">
+                    <p class="text-xs font-weight-bold mb-0">{{ data.subscriptionplan.name }}</p>
+                  </td>
+                  <td data-sort="{{ data.billing_date | date:'Ymd' }}" class="align-middle text-sm px-4">
+                    <p class="text-xs font-weight-bold mb-0 text-end">{{ data.billing_date|date:'D, d M Y' }}</p>
+                  </td>
+                  <td data-sort="{{ data.expires | date:'Ymd' }}" class="align-middle text-sm px-4">
+                    <p class="text-xs font-weight-bold mb-0 text-end">{{ data.expires|date:'D, d M Y' }}</p>
+                  </td>
+                  <td class="align-middle text-sm px-4">
+                    {% if data.active == True %}
+                    <p class="text-xs font-weight-bold mb-0 text-start">Active</p>
+                    {% else %}
+                    <p class="text-xs font-weight-bold mb-0 text-start">Not Active</p>
+                    {% endif%}
+                  </td>
+                  <td class="align-middle text-center px-4">
+                    {% if data.active == True %}
+                    <a href="{% url 'subscriptions:deactivate_subscription' data.id %}"
+                      class="btn btn-sm bg-danger text-white text-xs">Deactivate</a>
+                    {% else %}
+                    <a href="{% url 'subscriptions:activate_subscription' data.id %}" class="btn btn-sm bg-info text-white text-xs">Activate</a>
+                    {% endif %}
+                  </td>
+                </tr>
+                {% empty %}
+                <tr class="text-center">
+                  <td colspan="8" class="align-middle text-center text-sm">
+                    <p class="text-xs font-weight-bold mb-0">No Item in List</p>
+                  </td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
           </div>
-          <div class="col-md-6 text-end">
-            <span class="text-sm">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</span>
-          </div>
-          <hr>
         </div>
-      </div>
+      </section>
     </div>
   </div>
 </div>
