--- a/kawn_subscriptions_manager/templates/clients/list_outlet_client.html
+++ b/kawn_subscriptions_manager/templates/clients/list_outlet_client.html
@@ -29,8 +29,15 @@
                                 aria-hidden="true">&times;</span></button>
                     </div>
                     {% endfor %}
-                    <div class="align-middle">
-                        <h5 class="font-weight-bolder">{{ name.name }}'s Outlets</h5>
+                    <div class="row">
+                        <div class="d-inline">
+                            <a href="{% url 'clients:list_client'  %}" class="d-inline"><i class="fa fa-arrow-left"
+                                aria-hidden="true"></i></a>
+                            <h5 class="font-weight-bolder d-inline p-lg-2">{{ name.name }}'s Outlets</h5>
+                        </div>
+                        <div class="d-inline">
+                            <a href="{% url 'clients:add_outlet_client' pk %}" class="btn bg-gradient-info mt-2">Add Outlet</a>
+                        </div> 
                     </div>
                 </div>
                 <!-- <div class="pull-right">
@@ -54,14 +61,15 @@
                     </div>
                 </div> -->
                 <div class="table-responsive p-0">
-                    <table class="table sortable align-items-center mb-0">
+                    <table class="table table-sm sortable align-items-center mb-0">
                         <thead>
                             <tr>
                                 <th class="text-uppercase text-xxs text-dark font-weight-bolder">Outlet Name</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder text-en">Phone</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder text-end">Phone</th>
                                 <th class="text-uppercase text-xxs text-dark font-weight-bolder">Address</th>
                                 <th class="text-uppercase text-xxs text-dark font-weight-bolder">City</th>
                                 <th class="text-uppercase text-xxs text-dark font-weight-bolder">Province</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder text-center">Action</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -81,6 +89,15 @@
                                 </td>
                                 <td data-sort="{{ data.province_read }}" class="px-4">
                                     <p class="text-xs font-weight-bold mb-0">{{ data.province_read }}</p>
+                                </td>
+                                <td>
+                                    <a href="{% url 'clients:update_outlet_client' data.id %}" class="btn btn-sm bg-warning text-white text-xs">Edit</a>
+                                    <form class="d-inline" id="form-id" action="{% url 'clients:delete_outlet' data.id %}" method="post">
+                                        {% csrf_token %}
+                                        </a>
+                                        <button type="submit" class="btn btn-sm bg-danger btn-flat show_confirm text-white"
+                                            data-toggle="tooltip" title='Delete'>Delete</button>
+                                    </form>
                                 </td>
                             </tr>
                             {% empty %}
