--- a/kawn_subscriptions_manager/templates/clients/sales/list_client.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_client.html
@@ -56,10 +56,10 @@
             </div>
             <div class="card-body px-0 pt-0 pb-2">
                 <div class="table-responsive p-0">
-                    <table class="table sortable align-items-center mb-0">
+                    <table class="table table-sm sortable align-items-center mb-0">
                         <thead>
                             <tr>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Name</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Client Name</th>
                                 <th class="text-uppercase text-xxs text-dark font-weight-bolder">Address</th>
                                 <th class="text-uppercase text-xxs text-dark font-weight-bolder text-end">Phone</th>
                                 <th class="text-uppercase text-xxs text-dark font-weight-bolder">Brand Name</th>
