--- a/kawn_subscriptions_manager/templates/subscriptions/form_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/form_subscription.html
@@ -32,6 +32,24 @@
 </div>
 {% endblock %}
 
+<script>
+  $(function(){
+      var dtToday = new Date();
+
+      var month = dtToday.getMonth() + 1;
+      var day = dtToday.getDate();
+      var year = dtToday.getFullYear();
+      if(month < 10)
+          month = '0' + month.toString();
+      if(day < 10)
+          day = '0' + day.toString();
+
+      var minDate= year + '-' + month + '-' + day;
+
+      $('#txtDate').attr('min', minDate);
+  });
+</script>
+
 {% block inline_javascript %}
 <script></script>
 {% endblock inline_javascript %}
