--- a/kawn_subscriptions_manager/templates/clients/form_client.html
+++ b/kawn_subscriptions_manager/templates/clients/form_client.html
@@ -13,7 +13,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="d-flex flex-column h-100">
-                            <h5 class="font-weight-bolder">Form Client</h5>
+                            <h5 class="font-weight-bolder">Form Client SUPERVISOR</h5>
                             <form method="post" novalidate>
                                 {% csrf_token %}
                                 <input type="hidden" name="next" value="{{ next }}">
