--- a/kawn_subscriptions_manager/templates/clients/list_outlet.html
+++ b/kawn_subscriptions_manager/templates/clients/list_outlet.html
@@ -58,10 +58,11 @@
       </div>
       <div class="card-body px-0 pt-0 pb-2">
         <div class="table-responsive p-0">
-          <table class="table sortable align-items-center mb-0">
+          <table class="table table-sm sortable align-items-center mb-0">
             <thead>
               <tr>
                 <th class="text-uppercase text-xxs text-dark font-weight-bolder">Outlet Name</th>
+                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Client Name</th>
                 <th class="text-uppercase text-xxs text-dark font-weight-bolder text-end">Phone</th>
                 <th class="text-uppercase text-xxs text-dark font-weight-bolder">Address</th>
                 <th class="text-uppercase text-xxs text-dark font-weight-bolder">City</th>
@@ -74,6 +75,9 @@
               <tr>
                 <td data-sort="{{ data.name }}" class="px-4">
                   <p class="text-xs font-weight-bold mb-0 text-start">{{ data.name }}</p>
+                </td>
+                <td data-sort="{{ data.client.name }}" class="px-4">
+                  <p class="text-xs font-weight-bold mb-0 text-start">{{ data.client.name }}</p>
                 </td>
                 <td data-sort="{{ data.phone }}">
                   <p class="text-xs font-weight-bold mb-0 text-end">{{ data.phone }}</p>
@@ -97,6 +101,12 @@
                 </td>
                 <td class="align-middle text-center text-sm">
                   <a href="{% url 'clients:update_outlet' data.id %}" class="btn btn-sm bg-warning text-white text-xs">Edit</a>
+                  <form class="d-inline" id="form-id" action="{% url 'clients:delete_outlet' data.id %}" method="post">
+                    {% csrf_token %}
+                    </a>
+                    <button type="submit" class="btn btn-sm bg-danger btn-flat show_confirm text-white"
+                        data-toggle="tooltip" title='Delete'>Delete</button>
+                </form>
                 </td>
               </tr>
               {% empty %}
