--- a/kawn_subscriptions_manager/templates/clients/sales/form_outlet.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/form_outlet.html
@@ -26,7 +26,7 @@
                     <div class="col-lg-12">
                         <div class="d-flex flex-column h-100">
                             <h5 class="font-weight-bolder">Form Outlet</h5>
-                            <form method="post" novalidate>
+                            <form method="post" id="outletForm" data-cities-url="{% url 'clients:ajax_load_cities' %}" novalidate>
                                 {% csrf_token %}
                                 <input type="hidden" name="next" value="{{ next }}">
                                 {{ form|crispy }}
@@ -41,6 +41,27 @@
         </div>
     </div>
 </div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+<script>
+    $("#id_province").change(function () {
+        var url = $("#outletForm").attr("data-cities-url");
+        var provinceId = $(this).val();
+
+        $.ajax({
+            url: url,
+            data: {
+                'province': provinceId
+            },
+            success: function (data) {
+                $("#id_city").html(data);
+            }
+        });
+
+    });
+</script>
+
 {% endblock %}
 
 {% block inline_javascript %}
