--- a/kawn_subscriptions_manager/templates/subscriptions/sales/list_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/sales/list_subscription.html
@@ -31,7 +31,7 @@
           {% endfor %}
 
           <div class="align-middle">
-            <h5 class="font-weight-bolder">Susbcriptions</h5>
+            <h5 class="font-weight-bolder">Subcriptions</h5>
           </div>
 
           <div class="col-lg-12 mb-4 mt-2">
@@ -84,37 +84,47 @@
       <section class="section">
         <div class="card">
           <div class="card-body">
-            <table class="table" id="table1">
+            <table class="table table-sm" id="table1">
               <thead>
                 <tr>
-                  <th>Outlet Name</th>
-                  <th>Subscription Plan</th>
-                  <th>Billing Date</th>
-                  <th>Expired Date</th>
-                  <th>Status</th>
-                  <th>Action</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder">Outlet Name</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder">Subscription Plan</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Billing Date</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Expired Date</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder">Status</th>
+                  <th class="text-center text-uppercase text-xs text-dark font-weight-bolder">Action</th>
                 </tr>
               </thead>
               <tbody>
                 {% for data in object_list %}
                 <tr>
-                  <td>{{ data.outlet.name }}</td>
-                  <td>{{ data.subscriptionplan.name }}</td>
-                  <td>{{ data.billing_date|date:'D, d M Y' }}</td>
-                  <td>{{ data.expires|date:'D, d M Y' }}</td>
-                  <td>
+                  <td class="align-middle text-sm px-4">
+                    <p class="text-xs font-weight-bold mb-0">{{ data.outlet.name }}</p>
+                  </td>
+                  <td class="align-middle text-sm px-4">
+                    <p class="text-xs font-weight-bold mb-0">{{ data.subscriptionplan.name }}</p>
+                  </td>
+                  <td data-sort="{{ data.billing_date | date:'Ymd' }}" class="align-middle text-sm px-4">
+                    <p class="text-xs font-weight-bold mb-0 text-end">{{ data.billing_date|date:'D, d M Y' }}</p>
+                  </td>
+                  <td data-sort="{{ data.expires | date:'Ymd' }}" class="align-middle text-sm px-4">
+                    <p class="text-xs font-weight-bold mb-0 text-end">{{ data.expires|date:'D, d M Y' }}</p>
+                  </td>
+                  <td class="align-middle text-sm px-4">
                     {% if data.active == True %}
                     <p class="text-xs font-weight-bold mb-0 text-start">Active</p>
-                    {% else %}
+                    {% elif data.active == False %}
                     <p class="text-xs font-weight-bold mb-0 text-start">Not Active</p>
                     {% endif%}
                   </td>
-                  <td>
-                    {% if data.active == True %}
-                    <a href="{% url 'subscriptions:deactivate_subscription' data.id %}"
+                  <td class="align-middle text-center px-4">
+                    {% if data.active == True and data.is_approved is not None %}
+                    <a href="{% url 'subscriptions:sales_deactivate_subscription' data.id %}"
                       class="btn btn-sm bg-danger text-white text-xs">Deactivate</a>
+                    {% elif data.active == False and data.is_approved is not None %}
+                    <a href="{% url 'subscriptions:sales_activate_subscription' data.id %}" class="btn btn-sm bg-info text-white text-xs">Activate</a>
                     {% else %}
-                    <a href="{% url 'subscriptions:activate_subscription' data.id %}" class="btn btn-sm bg-info text-white text-xs">Activate</a>
+                    <p class="text-xs font-weight-bolder mb-0 text-center">Waiting for Approval</p>
                     {% endif %}
                   </td>
                 </tr>
