--- a/kawn_subscriptions_manager/templates/users/user_detail.html
+++ b/kawn_subscriptions_manager/templates/users/user_detail.html
@@ -20,7 +20,7 @@
         <div class="card">
             <div class="card-body p-3 mb-xl-12">
                 <h3>Users</h3><br>
-                <table class="table mb-0">
+                <table class="table table-sm mb-0">
                     <thead>
                         <tr class="text-center">
                             <th>Name</th>
