--- a/kawn_subscriptions_manager/templates/base.html
+++ b/kawn_subscriptions_manager/templates/base.html
@@ -8,19 +8,20 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Kawn Subscription Manager">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>{% block title %}Kawn Subscriptions Manager{% endblock title %}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Behold My Awesome Project!">
   <meta name="author" content="yoas">
   <link rel="icon" href="{% static 'images/kawn_logo.svg' %}" type="image/x-icon">
-
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+  
   {% block css %}
   <!-- Latest compiled and minified Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css"
-    integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
+  integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- Your stuff: Third-party CSS libraries go here -->
   <!-- This file stores project-specific CSS -->
   {% compress css %}
@@ -92,6 +93,7 @@
 
   {% block inline_javascript %}
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   <!--   Core JS Files   -->
   <script src="{% static 'js/core/popper.min.js' %}"></script>
   <script src="{% static 'js/core/bootstrap.min.js' %}"></script>
@@ -111,7 +113,7 @@
   <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="{% static 'js/soft-ui-dashboard.min.js' %}"></script>
   {% endblock inline_javascript %}
-
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
   <script src="{% static 'js/core/jquery.min.js' %}"></script>
   <script src="https://cdn.datatables.net/v/bs5/dt-1.12.1/datatables.min.js"></script>
   <script src="{% static 'js/plugins/datatables.js' %}"></script>
